# simple-file-system-fuse-c-

./: .gitignore  CMakeLists.txt
include/: utilities.hpp
include/myfs/: block.hpp  data.hpp  dirent.hpp  inode.hpp  superblock.hpp
src/: block.cpp  data.cpp  dirent.cpp  inode.cpp  main.cpp  superblock.cpp  utilities.cpp
